--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <nav id="main-header">
             <!--Logo--->
             <a href="index.html" class="logo">
-                <spin class="js">js;</spin>Study Giude</a>
+                <spin class="js">js;</spin>Study Guide</a>
             <!--navbar Sections--------->
             <div class="toggle"></div>
             <ul class="nbsec">
@@ -64,7 +64,7 @@
         <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg main-part">
             <di class="col-xs-10 col-sm-10 col-md-10 col-lg-7 main-part-content">
                 <h1>
-                    <spin class="js">JavaScript;</spin> Study Giude</a>
+                    <spin class="js">JavaScript;</spin> Study Guide</a>
                 </h1>
                 <p>You can learn more!</p>
             </di v>
